third_party/blink/web_tests/external/wpt/media-playback-quality/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface HTMLVideoElement: original interface defined assert_true: Original interface should be defined expected true got false
PASS VideoPlaybackQuality interface: existence and properties of interface object
PASS VideoPlaybackQuality interface object length
PASS VideoPlaybackQuality interface object name
PASS VideoPlaybackQuality interface: existence and properties of interface prototype object
PASS VideoPlaybackQuality interface: existence and properties of interface prototype object's "constructor" property
PASS VideoPlaybackQuality interface: existence and properties of interface prototype object's @@unscopables property
PASS VideoPlaybackQuality interface: attribute creationTime
PASS VideoPlaybackQuality interface: attribute corruptedVideoFrames
PASS VideoPlaybackQuality interface: attribute droppedVideoFrames
PASS VideoPlaybackQuality interface: attribute totalVideoFrames
Harness: the test ran to completion.

